fixed header position and legibility issues

--- a/main/c2g/static/css/common.scss
+++ b/main/c2g/static/css/common.scss
@@ -36,21 +36,26 @@ section {
 #global-header {
 	@include grid-row;
 	.school-brand {
-		@include grid-column(6);
+		@include grid-column(10);
 	}
 	.user-account {
-		@include grid-column(6);
+		@include grid-column(12);
 		text-align: right;
 		a {
 			letter-spacing: 1px;
 			margin-bottom: 0;
 			margin-left: 1em;
-			font-size: 0.5rem;
+			font-size: 0.8rem;
 			color: white;
 			&.button {
 				background-color: rgba(255, 255, 255, 0.2);
 				border: none;
 				box-shadow: none;
+				border-radius:3px;
+				font-weight: 600;
+			}
+			&:hover.button{
+				background-color: rgba(255, 255, 255, 0.4);
 			}
 		}
 	}
@@ -209,7 +214,8 @@ section {
 		@include grid-column(12);
 		color: white;
 		@extend .light;
-		font-size: 50%;
+		font-size: .8rem;
+		margin:0px;
 	}
 }
 
@@ -217,6 +223,7 @@ footer {
 	background-color: $brand-secondary;
 	padding-top: 2em;
 	padding-bottom: 2em;
+	font-size:1.3em;
 	.brand {
 		@include grid-row();
 	}
