--- a/main/c2g/static/css/core/foundation/_variables.scss
+++ b/main/c2g/static/css/core/foundation/_variables.scss
@@ -53,7 +53,7 @@ $default-float: left;
 
 $body-bg: #FDFCFC;
 $body-font-color: rgba(39, 44, 54, 0.7);
-$body-font-family: "ff-meta-web-pro", "Myriad Pro", Helvetica, Arial, sans-serif;
+$body-font-family: "Myriad Pro", Helvetica, Arial, sans-serif;
 $body-font-weight: normal;
 $body-font-style: normal;
 
